[package]
name = "rusty-junctions-macro"
version = "0.1.0"
authors = ["Kyle Cotton <kylecottonkc@gmail.com>"]
edition = "2021"
repository = "https://github.com/KyleCotton/rusty-junctions-macro"
license = "MIT"
keywords = ["join-pattern", "join-calculus", "concurrency", "macro"]
categories = ["concurrency"]
readme = "README.md"
description = "Library Generation and Client Macro API for rusty-junctions."

[dependencies]
client-api-proc-macro = { path = "client-api-proc-macro" }
client-api-macro = { path = "client-api-macro" }
library-generation-proc-macro = { path = "library-generation-proc-macro" }
