[package]
name = "rusty-junctions-macro"
version = "0.1.0"
authors = ["Kyle Cotton <kylecottonkc@gmail.com>"]
edition = "2021"
repository = "https://github.com/KyleCotton/rusty-junctions-macro"
license = "MIT"
keywords = ["join-pattern", "join-calculus", "concurrency", "macro"]
categories = ["concurrency"]
readme = "README.md"
description = "Library Generation and Client Macro API for rusty-junctions."

[dependencies]
rusty-junctions-client-api-proc-macro = { path = "rusty-junctions-client-api-proc-macro", version = "0.1.0" }
rusty-junctions-client-api-macro = { path = "rusty-junctions-client-api-macro", version = "0.1.0" }
rusty-junctions-library-generation-proc-macro = { path = "rusty-junctions-library-generation-proc-macro", version = "0.1.0" }
