[package]
name = "rusty-junctions-client-api-proc-macro"
version = "0.1.0"
edition = "2021"
authors = ["Kyle Cotton <kylecottonkc@gmail.com>"]
repository = "https://github.com/KyleCotton/rusty-junctions-macro"
license = "MIT"
keywords = ["join-pattern", "join-calculus", "concurrency", "macro"]
categories = ["concurrency"]
description = "A convenient set of procedural macros used as part of the rusty-junctions-macro Client Macro API."

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
uuid = { version = "0.8.2", features = ["v4"]}

[lib]
proc-macro = true
