[package]
name = "rusty-junctions-library-generation-proc-macro"
version = "0.1.0"
edition = "2021"
authors = ["Kyle Cotton <kylecottonkc@gmail.com>"]
repository = "https://github.com/KyleCotton/rusty-junctions-macro"
license = "MIT"
keywords = ["join-pattern", "join-calculus", "concurrency", "macro"]
categories = ["concurrency"]
description = "The Library Generation component of the rusty-junctions-macro crate"

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

[lib]
proc-macro = true